fixed mis-alignment and font differences

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ display:block;
 body {
 	font-size:16px;
 	line-height: 22px;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Open-Sans', sans-serif;
 	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 	-webkit-text-size-adjust: 100%;
 	margin: 0;
